- Fix gap

--- a/styles.css
+++ b/styles.css
@@ -273,7 +273,7 @@ a {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 15px;
     max-width: 1400px;
     background-color: var(--color-3);
     color: #F4F3EE;
